# fastmail-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  pyproject.toml
fastmail_adapter/: __init__.py  adapter.py
tests/: conftest.py  test_adapter_skeleton.py  test_bot_callbacks.py  test_bot_errors.py  test_bot_folder.py  test_bot_freshness.py  test_bot_mail_handler.py  test_bot_nudge.py  test_entrypoint.py  test_error_handling.py  test_read_verbs.py  test_session.py  test_triage_bot_skeleton.py  test_write_verbs.py
tests/fixtures/: email_get_single.json  email_query_get_chained.json  email_set_not_updated.json  email_set_success.json  mailbox_get.json  method_error.json  session.json
triage_bot/: __init__.py  __main__.py  bot.py
