[project]
name = "fastmail-adapter"
version = "0.1.0"
description = "Fastmail JMAP triage adapter + Telegram triage bot."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-telegram-bot[job-queue]>=21,<23",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "ruff>=0.7",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fastmail_adapter*", "triage_bot*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
